# kyraxIMU

./: .gdb_history  CMakeLists.txt  LICENSE  Makefile  README.md
debug/: main.elf  main.map
inc/: spi_driver.h
inc/cmsis-device-f4/Include/: stm32f4xx.h
src/: main.c  spi_driver.c
startup/: linkerscript_STM32F407VGT6.ld  startup_STM32F407VGT6.c
